<resources>
    <!--vivo,oppo,xiaomi需要加优辰  -->
    <string name="app_name">优辰证件照大师</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_more">请输入 证件照名称  尺寸和像素</string>
    <string name="input_from_album">相册导入</string>
    <string name="take_photo_now">立刻拍照</string>
    <string name="please_login">请登录</string>
    <string name="please_check_network">请检查网络</string>
    <string name="save_licence">保存证件照</string>
    <string name="tv_electron">电子版</string>
    <string name="string_claim">说明 : 支付成功即可同时保存电子版和冲印版</string>
    <string name="smooth">磨皮</string>
    <string name="white_skin">美白</string>
    <string name="tv_flush_out">冲印版</string>
    <string name="err_code_success">发送成功</string>
    <string name="err_code_cancel">发送取消</string>
    <string name="err_code_deny">发送被拒绝</string>
    <string name="err_code_unsupported">不支持错误</string>
    <string name="err_code_unknown">发送返回</string>
    <string name="order_msg">订单信息</string>
    <string name="not_paid">未支付</string>
    <string name="input_here">在这里输入相关信息</string>
    <string name="add_address">添加收货地址</string>
    <string name="addressee">收件人</string>
    <string name="phone">手机号码</string>
    <string name="choose_address">选择地址</string>
    <string name="address_details">详细地址</string>
    <string name="finish">完成</string>
    <string name="start_content">请你务必审慎阅读、充分理解《服务协议》和《隐私政策》各条款，包括但不限于：为了更好的向你提供服务，我们需要收集你的设备标识、操作日志等信息用于分析、优化应用性能。您在点击同意下列协议前，请您务必审慎阅读，并充分理解协议条款内容</string>
    <string name="service_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="not_agreed">不同意</string>
    <string name="agreed">同意</string>
    <string name="version_code">版本：%s</string>
    <string name="postal_code">邮政编码</string>
    <string name="login_suc_ok">登陆成功</string>
    <string name="open_net_connecting">请打开手机流量再进行登录</string>
    <string name="login_check_tip">请勾选服务条款和隐私政策</string>
    <string name="put_phone_here">在此输入手机号</string>
    <string name="put_code_here">在此输入手机验证码</string>
    <string name="has_send_to">验证码已发送至:</string>
    <string name="all_cost">合计（元）：</string>
    <string name="commodity_message">商品信息</string>
    <string name="input_phone">请输入您的手机号或邮箱（选填）</string>
    <string name="input_email">请输入您的邮箱</string>
    <string name="input_content">请输入您要反馈的内容</string>
    <string name="pic_knowledge">拍摄须知</string>
    <string name="right_pos">正确示范</string>
    <string name="pos_msg"> A.不穿高领服饰、不披发，露出耳朵脖子；\n B.后置摄像头拍摄，不耸肩；\n C.纯色背景,与头发服装区分开。</string>
    <string name="wrong_pos">错误示范</string>
    <string name="pos_wrong">穿戴高领服饰，穿戴帽衫，披发。</string>
    <string name="change_address">地址修改</string>
    <string name="commit_change">提交更改</string>
    <string name="flush_now">立即冲印</string>
    <string name="confirm_delete">确认删除当前地址？</string>
    <string name="delete_address">确定删除当前选中地址？</string>
    <string name="delete_order">确定删除当前订单？</string>
    <string name="single_background_cost">￥6.00（单背景）</string>
    <string name="multi_background_cost">￥7.00（多背景）</string>
    <string name="beauty_reload">￥6.00（美颜换装）</string>
    <string name="wx_pay">微信支付</string>
    <string name="click_to_choose_address">点击选择地址</string>
    <string name="multi_background">蓝底，红底，白底，红渐白底，蓝渐白底，黑渐白底</string>
    <string name="zfb_pay">支付宝支付</string>
    <string name="go_pick">去拍照</string>
    <string name="no_order">暂无订单信息哦</string>
    <string name="order_no">商品订单</string>
    <string name="forbid_step1">高领服装、帽衫、帽子、围巾</string>
    <string name="forbid_step3">避免与服装颜色相近</string>
    <string name="tv_discount">您还有一张3元优惠卷没使用</string>
    <string name="pay_now">立即去支付</string>
    <string name="give_up">忍痛离开</string>
    <string name="use_discount_pay">使用优惠卷支付</string>
    <string name="input_contact_name">请填写联系人名字</string>
    <string name="input_contact_way">请填写您的联系方式</string>
    <string name="payback_reason">请输入您要退款的原因</string>
</resources>