<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/drawable_top_radius">

    <TextView
        android:id="@+id/tv_tag0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pic_knowledge"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/dp_40"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_tag0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tag0">

        <TextView
            android:id="@+id/tv_tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_pos"
            android:textColor="@color/blue_bg" />

        <TextView
            android:id="@+id/tv_tag2"
            android:layout_marginTop="5dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/pos_msg"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_tag0"
        android:layout_width="80dp"
        android:layout_height="95dp"
        android:src="@mipmap/ic_right_pos"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tag0"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/ll_tag1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_tag0">

        <TextView
            android:id="@+id/tv_tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_pos"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tv_tag4"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pos_wrong"
            android:textColor="@color/black" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_tag1"
        android:layout_width="80dp"
        android:layout_height="95dp"
        android:src="@mipmap/ic_wrong_pos1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_tag1"
        app:layout_constraintRight_toLeftOf="@+id/iv_tag2"
        android:layout_marginTop="20dp"/>


    <ImageView
        android:id="@+id/iv_tag2"
        android:layout_width="80dp"
        android:layout_height="95dp"
        android:src="@mipmap/ic_wrong_pos2"
        app:layout_constraintLeft_toRightOf="@+id/iv_tag1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_tag1"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_tag1">

        <TextView
            android:id="@+id/tv_album_output"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/input_from_album"
            android:background="@color/color_fdc8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_take_pic"/>

        <TextView
            android:id="@+id/tv_take_pic"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/take_photo_now"
            android:background="@color/color_ffbf"
            app:layout_constraintTop_toBottomOf="@+id/iv_tag2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_album_output"/>

    </LinearLayout>


<!--    <TextView-->
<!--        android:id="@+id/tv_album_output"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="35dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/light_yellow"-->
<!--        android:text="@string/input_from_album"-->
<!--        android:background="@drawable/tv_choose_address_bg"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/iv_tag1"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toLeftOf="@+id/tv_take_pic"/>-->

<!--    <TextView-->
<!--        android:id="@+id/tv_take_pic"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="35dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/white"-->
<!--        android:text="@string/take_photo_now"-->
<!--        android:background="@drawable/save_licence"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/iv_tag2"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintLeft_toRightOf="@+id/tv_album_output"/>-->

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_take_pic"-->
<!--        android:layout_marginTop="20dp"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>