<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/drawable_top_radius">

    <TextView
        android:id="@+id/tv_tag0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/dp_40" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:clickable="true"
        android:src="@drawable/ic_close_round"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:id="@+id/ll_addressee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tag0">

        <TextView
            android:id="@+id/tv_addressee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressee"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/addressee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_postal_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_addressee">

        <TextView
            android:id="@+id/tv_postal_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_postal_code">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_choose_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_phone_num">

        <TextView
            android:id="@+id/tv_choose_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_address"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/choose_address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <ImageView
            android:id="@+id/iv_choose_address"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_address_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_choose_address">

        <TextView
            android:id="@+id/tv_address_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_details"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/address_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/commit_change"
        android:background="@drawable/save_licence"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_address_details"/>

    <View
        android:id="@+id/v_tag0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_40"
        app:layout_constraintTop_toBottomOf="@+id/tv_commit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>