<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.address.AddAddressActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBar"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:text="@string/finish"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/next_step"
            android:layout_marginRight="20dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_addressee"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tv_addressee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressee"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/addressee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"

            android:layout_marginHorizontal="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_postal_code"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_addressee">

        <TextView
            android:id="@+id/tv_postal_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/postal_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"

            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_num"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_postal_code">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"

            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_choose_address"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/ll_phone_num">

        <TextView
            android:id="@+id/tv_choose_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_address"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/choose_address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"/>

        <ImageView
            android:id="@+id/iv_choose_address"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_right_arrow" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_address_details"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_choose_address">

        <TextView
            android:id="@+id/tv_address_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_details"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/address_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/black"

            android:layout_marginHorizontal="20dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>